[package]
name = "empty"
version = "0.1.0"
authors = ["Roman Shulenkov postmaster@mcu.by"]
edition = "2018"

[dependencies]
cortex-m = "0.6.2"
cortex-m-log="0.6.1"

[dependencies.stm32f7]
version = "0.10.0"
features = ["stm32f7x6", "rt"]

[dependencies.cortex-m-rt]
version = "0.6.12"
features = ["device"]

